data/derived/fa15/progs/unify/prog0346.ml.out
Characters 98-102:
  wwhile ((f'),b);;
          ^^^^
Error: This expression has type ('a -> 'a) -> 'a -> 'a * bool
       but an expression was expected of type ('a -> 'a) -> ('a -> 'a) * bool
       Type 'a -> 'a * bool is not compatible with type ('a -> 'a) * bool 
